test/Fail/PolarityAnnotations-AnnotatedDef.err
PolarityAnnotations-AnnotatedDef.agda:7.7-8: error: [VariableIsOfUnusablePolarity]
Variable A is bound with negative polarity, so it cannot be used
here at a positive position
when checking that the expression A has type _0
